[tool.poetry]
name = "reddist"
version = "0.1.2"
description = "Just a simple library for caching reddit posts"
authors = ["CaffieneDuck <samrid.pandit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiofiles = "0.6.0"
asyncpraw = "^7.5.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1a1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
select = ["C","E","F","W","B","B950"]
extend-ignore = ["E203", "E501"]